# WeatherWatch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
sensors/: admin.py  models.py  tests.py  urls.py
sensors/migrations/: 0001_initial.py
sensors/serializers/: alerts.py  sensors.py  sessions.py
sensors/views/: __init__.py  alerts.py  sensors.py  sessions.py
users/: managers.py  models.py
users/migrations/: 0001_initial.py
